# geospatial-centrality-spark

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: centros_educativos_madrid.json
notebooks/: demo.ipynb
scripts/: compare_centrality_methods.py  compare_distance_methods.py  prepare_data.py
src/: benchmark.py  centrality.py  cli.py  distance.py  io.py  spark_jobs.py  spark_session.py
tests/: test_distance.py
